--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,23 @@
     <artifactId>xmlParser</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.8.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+
+
+
+    </dependencies>
+
     <properties>
         <maven.compiler.source>11.02</maven.compiler.source>
         <maven.compiler.target>11.02</maven.compiler.target>
