--- a/pom.xml
+++ b/pom.xml
@@ -21,13 +21,38 @@
             <version>1.3.1</version>
         </dependency>
 
-
-
     </dependencies>
 
     <properties>
         <maven.compiler.source>11.02</maven.compiler.source>
         <maven.compiler.target>11.02</maven.compiler.target>
+        <jdk.version>11.02</jdk.version>
     </properties>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>${jdk.version}</source>
+                    <target>${jdk.version}</target>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>xmlParser.Main</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
